--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,16 @@ font-weight:200;
 display: block;
 }
 
+#youcheck, #partnercheck, #alphacheck1, #alphacheck2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ /*margin: 5px 60px 5px 60px;*/
+  font-family: 'Allura', cursive;
+  font-size: 1.8rem;
+  font-weight:400;
+}
+
 /* for mobile - max upto 767 width*/
 @media only screen and (min-width: 376px) and (max-width: 767px) {
 
@@ -217,10 +227,13 @@ display: block;
    background-color: #45a049;
  }
 
- #youcheck, #partnercheck {
-   margin: 5px 60px 5px 60px;
-   font-family: cursive;
-   font-weight: normal;
+ #youcheck, #partnercheck, #alphacheck1, #alphacheck2 {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: 'Allura', cursive;
+   font-size: 2rem;
+   font-weight:400;
  }
 }
 
@@ -283,10 +296,13 @@ display: block;
     font-size: 2rem;
   }
 
-  #youcheck, #partnercheck {
-    margin: 5px 60px 5px 100px;
-    font-family: cursive;
-    font-weight: normal;
+  #youcheck, #partnercheck, #alphacheck1, #alphacheck2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Allura', cursive;
+    font-size: 2rem;
+    font-weight:400;
   }
 }
 
@@ -352,10 +368,13 @@ display: block;
    background-color: #45a049;
  }
 
- #youcheck, #partnercheck {
-   margin: 5px 60px 5px 60px;
-   font-family: cursive;
-   font-weight: normal;
+ #youcheck, #partnercheck, #alphacheck1, #alphacheck2 {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: 'Allura', cursive;
+   font-size: 1.5rem;
+   font-weight:400;
  }
 }
 
@@ -372,7 +391,7 @@ display: block;
    display: block;
    width: 80%;
    margin: 40px 35px 60px 35px;
-   background-color: #FFBFA9;
+   background-color: #F/FBFA9;
    border: none;
    border-radius: 4px;
  }
@@ -422,9 +441,12 @@ display: block;
    background-color: #45a049;
  }
 
- #youcheck, #partnercheck {
-   margin: 5px 60px 5px 30px;
-   font-family: cursive;
-   font-weight: normal;
+ #youcheck, #partnercheck, #alphacheck1, #alphacheck2 {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: 'Allura', cursive;
+   font-size: 1.5rem;
+   font-weight:400;
  }
 }
