--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
   body {
     background-color: #FFEBB4;
+    margin: 0;
   }
 
   /*@media max-width {
@@ -87,8 +88,8 @@
   h1 {
     text-align: center;
     font-size: 3rem;
-    margin: 100px 100px 40px 100px;
-    padding: 10px;
+    margin: 40px 100px 40px 100px;
+    padding: 20px 10px 10px;
     font-family: 'Dancing Script', cursive;
     font-weight: bold;
 
@@ -125,7 +126,7 @@
     background-color: #04AA6D;
     color: white;
     padding: 14px 20px;
-    margin: 8px 250px 40px 250px;
+    margin: 8px 250px 40px 260px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -165,11 +166,11 @@
     font-weight:400;
   }
 
-  @media only screen and (min-width: 1024px) and (max-width: 1439px) {
+  @media only screen and (min-width: 1024px) and (max-width: 1365px) {
 
 
         .heading {
-      
+
 text-align: center;
 padding: 30px 5px 5px;
         }
